<resources>
    <string name="app_name">Broadcaster</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview_2">TextView 2</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="welcome_to_meetcute">Welcome to MeetCute</string>
    <string name="already_have_an_account_login">Already have an account ? <font color="#EF32D7">Login</font></string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_4_digit_code_sent_to_your_mail">Enter the 4-digit code sent to your mail</string>
    <string name="set_your_password">Set Your Password</string>
    <string name="create_your_credential_to_login_your_account">Create your credential to login your account</string>
    <string name="your_password_has_been_set_successfully">Your password has been set\nsuccessfully!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="add_your_features_physique"><![CDATA[Add Your features & Physique]]></string>
    <string name="use_hashtags_in_your_profile">Use Hashtags in your profile</string>
    <string name="users_will_be_able_to_search_using_hashtags">Users will be able to search using hashtags</string>
    <string name="max_15_hashtags">Max 15 hashtags</string>
    <string name="select_from_below_range">Select from below range</string>
    <string name="we_suggest_you_to_set_up_your_video_call_rate_between_100_200_coins_per_minute">We suggest you to set up your video call rate between <font color="#EF32D7">100-200 coins</font> per minute</string>
    <string name="please_wait_for_2_3_days_until_your_account_will_be_verified_by_our_team">Please wait for 2-3 days until your account will be verified by our team</string>
    <string name="congratulations_you_have_completed_your_profile">Congratulations ! You have completed your profile</string>
    <string name="your_account_is_under_verification">Your account is under verification</string>
    <string name="edit_details">Edit Details</string>
    <string name="reason_for_rejection_lorem_ipsum_lorem_ipsum"><b>Reason for Rejection:</b> Lorem ipsum lorem ipsum</string>
    <string name="your_account_is_disapproved_by_our_team">Your account is disapproved by our team.</string>
    <string name="edit_your_details_to_get_verified_again">Edit your details to get verified again</string>
    <string name="congratulations_your_account_is_verified">Congratulations ! Your account is verified.</string>
    <string name="login_again_to_access_your_account">Login again to access your account</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="enter_your_email_address_password_to_login"><![CDATA[Enter Your Email Address & Password to login]]></string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color="#EF32D7">Sign up</font></string>
    <string name="no_broadcaster_yet">No Broadcaster Yet</string>
    <string name="you_have_logged_in_sucessfully">You have logged in sucessfully</string>
    <string name="congratulations">Congratulations</string>
    <string name="allow_camera">Allow camera</string>
    <string name="this_is_necessary_for_video_calls">This is necessary for video calls.</string>
    <string name="allow_microphone">Allow microphone</string>
    <string name="meetcute_needs_to_have_access_to_get_below_access_so_that_you_can_make_friends">Meetcute Needs to have access to get below access so that you can make friends</string>
    <string name="video_call_setting">Video Call Setting</string>
    <string name="user_will_be_able_to_view_while_connecting_the_call">User will be able to view while connecting the call</string>
    <string name="calling_loop_video">Calling Loop video</string>
    <string name="this_will_be_visible_when_user_checkout_your_profile">This will be visible when user checkout your profile</string>
    <string name="thumbnail_loop_video">Thumbnail Loop video</string>
    <string name="dialoglogout">Are you sure you want to logout your account?</string>
    <string name="dialogno">No</string>
    <string name="NoCancel">No, Cancel</string>
    <string name="Settings">Settings</string>
    <string name="AllNotifications">All Notifications</string>
    <string name="LiveBroadcasts">Live Broadcasts</string>
    <string name="GiftSounds">Gift Sounds</string>
    <string name="VideoCall">Video Call</string>
    <string name="ChatMessages">Chat Messages</string>
    <string name="Statistics">Statistics</string>
    <string name="BroadcastEarnings">Broadcast Earnings</string>
    <string name="BroadcastTime">Broadcast Time</string>
    <string name="TotalViewers">Total Viewers</string>
    <string name="NewFollowers">New Followers</string>
    <string name="videocallEarnings">1-1 video call Earnings</string>
    <string name="TimeSpentontheApp">Time Spent on the App</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="Today">Today</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Earnings">Earnings</string>
    <string name="income">$8,900</string>
    <string name="TodayEarnings">Today’s Earning</string>
    <string name="totalincome">$3,900</string>
    <string name="EarningHistory">Earning History</string>
    <string name="addcoin">"+$200 "</string>
    <string name="VideoCallAJK">Video Call | #AJK646128</string>
    <string name="hundread">100</string>
    <string name="time">12:45</string>
    <string name="videocall">Video Call | #AJK646128</string>
    <string name="Redeemcoin">"-$5000 "</string>
    <string name="timeRedeem">10:03</string>
    <string name="MyAccount">My Account</string>
    <string name="AccountInfo">Account Info</string>
    <string name="redeemEarnings">"Redeem Earnings "</string>
    <string name="GeneralSettings">General Settings</string>
    <string name="BlockList">Block List</string>
    <string name="ContactUs">Contact Us</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="TermConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="Logout">Logout</string>
    <string name="Endedbroadcast">Ended broadcast</string>
    <string name="loremipsumestbetfjksadiqluw">lorem ipsum est bet fjk sadiqluw</string>
    <string name="mintime">2m ago</string>
    <string name="HannaKoisy">Hanna Koisy</string>
    <string name="Four">4</string>
    <string name="FakeProfile">Fake Profile</string>
    <string name="dialogflag">"Are you sure you want report Venezuela? "</string>
    <string name="NoteUponreport">  <b> Note:</b> Upon report, you will not be able see this user again</string>
    <string name="Unfollow_Venezuela">Unfollow Venezuela</string>
    <string name="Are_you_sure_you_want_to_end_the_call">Are you sure you want to end the call?</string>
    <string name="Continue">Continue</string>
    <string name="Your_rate_confirmation_is_pending_from_our_team">Your rate confirmation is pending from our team.</string>
    <string name="Writehere">Write here....</string>
    <string name="fifty">0/50</string>
    <string name="SetMilestone">Set Milestone</string>
    <string name="Giftxs_5">0</string>
    <string name="Gifts_100">20 Gifts</string>
    <string name="Are_you_sure_you_want_block_John_Smith">"Are you sure you want block John Smith? "</string>
    <string name="No">No</string>
    <string name="dialogsdeletstory">Are you sure you want to Delete your story?</string>
    <string name="TagGift">Tag Gift</string>
    <string name="Set_Entry_fee_between_50_to_200_coins">Set Entry fee between 50 to 200 coins</string>
    <string name="GoPremium">Go Premium</string>

    <string name="are_you_sure_you_want_to_end_broadcast_and_start_video_call_with_john_smith">Are you sure you want to end Broadcast and start video call with John smith ?</string>
    <string name="all_conversations">All Conversations</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="start_contest">Start Contest</string>

    <string name="Message">Hey Hanna, how are you today?</string>
    <string name="tvMint">12m ago</string>
    <string name="lovepic">I love your pic❤</string>
    <string name="MyProfile">My Profile</string>
    <string name="today_s_earnings">Today\'s Earnings</string>
    <string name="earnings">Earnings</string>
    <string name="enter_your_email_to_recover_your_password">Enter Your Email to recover your password</string>
</resources>