<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BroadcastEarningsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/arrow_left" />

            <TextView
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="68dp"
                android:text="@string/BroadcastEarnings"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                style="@style/Text16"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Today"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                style="@style/Text16"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Week"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                style="@style/Text16"
                android:layout_marginEnd="41dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Month"/>






        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>