<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.meetcute.viewModel.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".view.activities.SignUpActivity">

        <ImageView
            android:layout_width="164dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/meetcute_small" />

        <TextView
            style="@style/Text24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_to_meetcute" />

        <TextView
            style="@style/Text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/enter_your_email_address_password_to_login" />

        <org.meetcute.view.customViews.AppEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            app:editTextHint="work.sythongnguyen@g"
            app:editTextModel="@{viewModel.emailModel}"
            app:input="email"
            app:isTitle="true"
            app:title="Email" />

        <org.meetcute.view.customViews.AppEditTextPassword
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:editTextHint="Enter password"
            app:editTextModelPassword="@{viewModel.passwordModel}"
            app:isTitle="true"
            app:title="Password" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/Text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:paddingVertical="6dp"
            android:text="@string/forgot_password" />

        <org.meetcute.view.customViews.AppButton
            android:id="@+id/rlSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.login()}"
            app:buttonText="Sign In"
            app:isIcon="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/dontHaveAccount"
            style="@style/Text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:text="@string/don_t_have_an_account_sign_up" />
    </LinearLayout>

</layout>