<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_backgournd"
        android:orientation="vertical">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/profilephoto" />

    <TextView
        style="@style/Text24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/Unfollow_Venezuela" />

    <TextView
        style="@style/Text14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/Are_you_sure_you_want_to_end_the_call"/>

    <FrameLayout
        android:id="@+id/flAllowMircophone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_gradient">

        <TextView
            style="@style/Text16Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="13dp"
            android:drawablePadding="10dp"
            android:text="@string/Continue" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flDontAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient_stroke_24dp">

        <TextView
            style="@style/Text16Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="13dp"
            android:drawablePadding="10dp"
            android:text="Yes, End call" />
    </FrameLayout>
    </LinearLayout>

</FrameLayout>