<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="org.meetcute.viewModel.AuthViewModel" />

        <import type="org.meetcute.appUtils.EditTextModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".view.activities.SignUpActivity">

        <ImageView
            android:layout_width="164dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/meetcute_small" />

        <TextView
            style="@style/Text24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_to_meetcute" />

        <TextView
            style="@style/Text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/enter_your_email_address" />

        <org.meetcute.view.customViews.AppEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            app:editTextHint="work.sythongnguyen@g"
            app:isTitle="true"
            app:editTextModel="@{viewModel.emailModel}"
            app:input="email"
            app:title="Email" />

        <org.meetcute.view.customViews.AppButton
            android:id="@+id/rlSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:buttonText="Sign Up"
            android:onClick="@{() -> viewModel.validateEmail()}"
            app:isIcon="true" />

        <TextView
            android:id="@+id/alreadyHavAccount"
            style="@style/Text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/already_have_an_account_login" />
    </LinearLayout>

</layout>